Update and rename Space.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
     <head>
-        <link rel = "stylesheet" href = "Space.css">
+        <link rel = "stylesheet" href = "style.css">
         <link rel = "shortcut icon" href= "https://o.remove.bg/downloads/1fbb1c2d-976a-42bc-ad21-6bc94d174687/%D0%97%D0%B5%D0%BC%D0%BB%D1%8F-removebg-preview.png">
         <meta charsed = "UTF-8">
         <title>Солнечная система</title>
